<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:drawableEnd="@drawable/arrow_down_bold_wrapped"
        android:drawableRight="@drawable/arrow_down_bold_wrapped"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/title_201873"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textview_201873_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description_201873_1" />

        <TextView
            android:id="@+id/textview_201873_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic"
            tools:text="PINK"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/textview_201873_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/description_201873_2" />

</LinearLayout>